add background patterns

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <div class="block block__9"></div>
 
             <div class="block block__10"></div>
+
+            <div class="block block__20"></div>
+
+            <div class="block block__21"></div>
+
+            <div class="block block__22"></div>
         </div>
     </div>
 </body>
