add background pattern

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
             <div class="block block__9"></div>
 
             <div class="block block__10"></div>
+
+            <div class="block block__11"></div>
+
+            <div class="block block__12"></div>
+
+            <div class="block block__13"></div>
+
+            <div class="block block__14"></div>
         </div>
     </div>
 </body>
