add block figures and visual effects

--- a/index.html
+++ b/index.html
@@ -67,7 +67,26 @@
     <div class="block__figure-element">
         <h1 class="block__title">Figures</h1>
         <div>
-            <div class="block block__20"></div>
+            <div class="block block__20">Гибкий эллипс</div>
+            <div class="block block__21">Полуэллипс</div>
+            <div class="block block__22">Четверть эллипса</div>
+            <div class="block block__23">Параллелограмм</div>
+            <img class="block block__24" src="img/stone-art.jpg">
+            <div class="block block__25">Срезанный угол</div>
+            <div class="block block__26">Два срезанных угла</div>
+            <div class="block block__27">Четыре срезанных угла</div>
+            <div class="block block__28">Четыре срезанных угла</div>
+            <div class="block block__29">Трапеция</div>
+        </div>
+    </div>
+    <div class="block__visual-effect">
+        <h1 class="block__title">Visual Effects</h1>
+        <div>
+            <div class="block block-effect block__30"></div>
+            <div class="block block-effect block__31"></div>
+            <div class="block block-effect block__32"></div>
+            <div class="block block-effect block__33"></div>
+            <div class="block block-effect block__34"></div>
         </div>
     </div>
 </body>
