--- a/index.html
+++ b/index.html
@@ -89,6 +89,28 @@
             <div class="block block-effect block__34"></div>
         </div>
     </div>
+    <div class="block__text-format">
+        <h1 class="block__title">Work with text</h1>
+        <div class="block__35">
+            t is a long established fact that a reader will be distracted by the readable
+            content of a page when looking at its layout. The point of using Lorem Ipsum
+            is that it has a more-or-less normal distribution of letters, as opposed to using
+            'Content here, content here', making it look like readable English. Many desktop
+            publishing packages and web page editors now use Lorem Ipsum as their default model
+            text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+            Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+        </div>
+        <div class="block__36">
+            <dl>
+                <dt>Name:</dt>
+                <dd>Valeriia</dd>
+                <dd>Valeriia</dd>
+
+                <dt>Sex:</dt>
+                <dd>Female</dd>
+            </dl>
+        </div>
+    </div>
 </body>
 </html>
 
